# parcela

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  bump_version
.github/workflows/: release.yml  windows-test.yml
docs/: Parcela-Whitepaper.aux  Parcela-Whitepaper.fdb_latexmk  Parcela-Whitepaper.fff  Parcela-Whitepaper.fls  Parcela-Whitepaper.ms  Parcela-Whitepaper.out  index.html
docs/assets/: parcela-demo.webm
scripts/: build_whitepaper.sh  generate_stego_images.py  test-windows.ps1
src/: lib.rs  main.rs  projfs_fs.rs  security_verification.rs  stego.rs  virtual_drive.rs  winfsp_fs.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: parcela.xml
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs
tests/: projfs_integration.rs  winfsp_integration.rs
ui/: index.html  main.js  package-lock.json  package.json  style.css
ui/tests/: setup.js  virtual-drive.test.js
whitepaper/: Parcela-Whitepaper.fdb_latexmk  Parcela-Whitepaper.fls  Parcela-Whitepaper.tex  Parcela-Whitepaper.tr  README.md
