[package]
name = "parcela"
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/parcela"
description = "Split-key encryption vault with virtual drive support"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-projfs = "0.1"
parking_lot = "0.12"
