[package]
name = "parcela-tauri"
version = "0.1.5"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lazy_static = "1.4"
parcela = { path = ".." }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
open = "5"

[dev-dependencies]
tempfile = "3"
